--- a/src/HelloWorld/index.html
+++ b/src/HelloWorld/index.html
@@ -10,21 +10,32 @@
     <div id="loading" class="jumbotron">
         <h1><span class="fas fa-spinner fa-spin"></span></h1>
         <h1>Please wait while the application is loaded...</h1>
+        <div class="progress">
+            <div id="loading-progress" class="progress-bar" role="progressbar"></div>
+        </div>
     </div>
 
     <div id="app" style="display:none;" class="jumbotron">
         <h1>Please look in the console of the broswer in order to see the output.</h1>
-        <button id="button" class="btn btn-primary" onclick="Program.invokeMethod('IncrementClickCount')">Click me!</button>
+        <button id="button" class="btn btn-primary" onclick="Program.invokeStaticMethod('IncrementClickCount')">Click me!</button>
     </div>
 
-    <!-- You need to include WasmWrangler.js first -->
-    <script type="text/javascript" src="js/WasmWrangler.js"></script>
-    
+    <!-- You need to include wasmwrangler.js first -->
+    <script type="text/javascript" src="wasmwrangler.js"></script>
+
     <script type="text/javascript">
-        const Program = Wasm.createStaticClassContext("HelloWorld", "HelloWorld.Program");
+        WasmWrangler.initialize({
+            onLoadProgress: (loaded, total) => {
+                const progress = document.getElementById("loading-progress");
+
+                const loadedPercent = loaded / total * 100.0;
+                progress.style.width = loadedPercent + "%";
+            },
+            onLoaded: () => {
+                window["Program"] = WasmWrangler.getAssembly("HelloWorld").getClass("HelloWorld", "Program");
+                Program.invokeStaticMethod("Main");
+            },
+        });
     </script>
-    
-    <!-- wasm.boostrapper.js will call the Main() from .NET -->
-    <script type="text/javascript" src="wasm.bootstrapper.js"></script>
 </body>
 </html>
